@startuml model
hide empty members
' skinparam Linetype polyline

class ingredientCategory {
  {field} name => varchar(255)
}

class recipeCategory {
  {field} name => varchar(255)
}

class suggestionCategory {
  {field} name => varchar(255)
}

class mealCategory {
  {field} name => varchar(255)
}

class ingredient {
  {field} name => varchar(255)
  {field} allergen => boolean
}

class recipe {
  {field} name => varchar(255)
  {field} summary => varchar(500)
  {field} description => text
  {field} image => blob
  {field} nbPerson => float
  {field} /rating => float
}


class advert {
  {field} promotion => text
  {field} price => float
}

class suggestion {
  {field} title => varchar(255)
  {field} description => text
}


class comment {
  {field} rating => float
  {field} content => text
  {field} date => date
}

class calendar

class calendar_day {
  {field} date => date
}


class recipeList {
  {field} name => varchar(255)
}

class cart {
}

class cart_entry {
  quantity => float
}

class partner {
  {field} name => varchar(255)
  {field} description => text
  {field} website => varchar(255)
}

class news {
  {field} title => varchar(255)
  {field} content => text
  {field} date => date
  {field} photo => blob
}

class user {
  {field} name => varchar(255)
  {field} email => varchar(255)
  {field} password => varchar(255)
  {field} phone => varchar(32)
  {field} birthdate => date
  {field} question => varchar(255)
  {field} answer => varchar(255)
  {field} isAdmin => boolean
}

class ingredientQuantityForRecipe {
  {field} quantity => int
}

advert "*"                      -d-> "1" ingredient
advert "*"                      -l- "1" partner

calendar "1"                    --> "*" calendar_day
cart "1"                        --> "*" cart_entry
cart_entry "*"                  --> "*" ingredient
comment "1"                     --> "1" user

ingredientQuantityForRecipe "*" -- "*" ingredient

mealCategory "*"                --> "*" recipe

recipe  "1"                     -> "*" comment
recipe "*"                      -- "*" ingredientQuantityForRecipe
recipeList "*"                  -- "*" recipe

user "1"                        --> "1" calendar
user "1"                        --> "1" cart
user "*"                        --l--> "*" ingredient
user "1"                        --> "*" recipeList
user -[hidden]u- news

calendar_day "*"                --> "*" mealCategory
ingredient "*"                  --l--> "*" ingredientCategory
recipe "*"                      --> "*" recipeCategory
suggestion "*"                  --> "1" suggestionCategory
@enduml